fix: income country only thai and fix footer gap

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -42,5 +42,6 @@
   .main-page {
     padding: 16px;
     gap: 50px;
+    padding-bottom: 105px;
   }
 }
